[tool.poetry]
name = "llm-scraper"
version = "1.0.0"
description = "An open-source, AI based web scraper"
authors = ["Vithushan Sylvester <https://www.linkedin.com/in/msvithushan>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
streamlit = "^1.38.0"
langchain = "^0.2.15"
langchain-ollama = "^0.1.3"
selenium = "^4.24.0"
beautifulsoup4 = "^4.12.3"
lxml = "^5.3.0"
html5lib = "^1.1"
python-dotenv = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
